# moria

./: .gitignore  README.md  index.html  moria-backup.bundle  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  wrangler.toml
.claude/: settings.local.json
crypto/: Cargo.toml
crypto/src/: lib.rs
public/: _headers  faq.html  manifest.json  panic.js
scripts/: generate-icons.mjs  sri.mjs
src/: App.tsx  capabilities.ts  index.css  main.tsx
src/components/: ChatRoom.tsx  EntryScreen.tsx  GateSvg.tsx  InputBar.tsx  MessageList.tsx  StarSvg.tsx  StegoMode.tsx  VoicePlayer.tsx  WarnDialog.tsx
src/crypto/: argon2id.ts  chacha20.ts  worker.ts  x25519.ts
src/hooks/: useAlias.ts  useInactivityTimer.ts  useMessages.ts  usePanic.ts  useRoom.ts
src/security/: copyPrevention.ts  index.ts  screenshotPrevention.ts
src/transport/: deadDrop.ts  decoy.ts  room.ts
src/types/: index.ts
src/utils/: imageChunker.ts  linkify.tsx  peerColors.ts  sounds.ts  stripExif.ts  verifyWords.ts  voiceRecorder.ts  wordlist.ts
src/wasm/: config.ts  index.ts
src/wasm/pkg/: moria_crypto.d.ts  moria_crypto.js  moria_crypto_bg.wasm  moria_crypto_bg.wasm.d.ts  package.json
