[package]
name = "moria-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
chacha20poly1305 = "0.10"
rand = { version = "0.8", features = ["getrandom"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
